webgpu/src/main/java/org/webgpu/foriegn/webgpu_h.java


    /**
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndexed(WGPURenderPassEncoder renderPassEncoder, uint32_t indexCount, uint32_t instanceCount, uint32_t firstIndex, int32_t baseVertex, uint32_t firstInstance)
     * }
     */
    public static void wgpuRenderPassEncoderDrawIndexed(MemorySegment renderPassEncoder, int indexCount, int instanceCount, int firstIndex, int baseVertex, int firstInstance) {
        var mh$ = wgpuRenderPassEncoderDrawIndexed.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderPassEncoderDrawIndexed", renderPassEncoder, indexCount, instanceCount, firstIndex, baseVertex, firstInstance);
            }
            mh$.invokeExact(renderPassEncoder, indexCount, instanceCount, firstIndex, baseVertex, firstInstance);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wgpuRenderPassEncoderDrawIndexedIndirect {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            webgpu_h.C_POINTER,
            webgpu_h.C_POINTER,
            webgpu_h.C_LONG
        );

        public static final MemorySegment ADDR = webgpu_h.findOrThrow("wgpuRenderPassEncoderDrawIndexedIndirect");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndexedIndirect(WGPURenderPassEncoder renderPassEncoder, WGPUBuffer indirectBuffer, uint64_t indirectOffset)
     * }
     */
    public static FunctionDescriptor wgpuRenderPassEncoderDrawIndexedIndirect$descriptor() {
        return wgpuRenderPassEncoderDrawIndexedIndirect.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndexedIndirect(WGPURenderPassEncoder renderPassEncoder, WGPUBuffer indirectBuffer, uint64_t indirectOffset)
     * }
     */
    public static MethodHandle wgpuRenderPassEncoderDrawIndexedIndirect$handle() {
        return wgpuRenderPassEncoderDrawIndexedIndirect.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndexedIndirect(WGPURenderPassEncoder renderPassEncoder, WGPUBuffer indirectBuffer, uint64_t indirectOffset)
     * }
     */
    public static MemorySegment wgpuRenderPassEncoderDrawIndexedIndirect$address() {
        return wgpuRenderPassEncoderDrawIndexedIndirect.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndexedIndirect(WGPURenderPassEncoder renderPassEncoder, WGPUBuffer indirectBuffer, uint64_t indirectOffset)
     * }
     */
    public static void wgpuRenderPassEncoderDrawIndexedIndirect(MemorySegment renderPassEncoder, MemorySegment indirectBuffer, long indirectOffset) {
        var mh$ = wgpuRenderPassEncoderDrawIndexedIndirect.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderPassEncoderDrawIndexedIndirect", renderPassEncoder, indirectBuffer, indirectOffset);
            }
            mh$.invokeExact(renderPassEncoder, indirectBuffer, indirectOffset);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wgpuRenderPassEncoderDrawIndirect {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            webgpu_h.C_POINTER,
            webgpu_h.C_POINTER,
            webgpu_h.C_LONG
        );

        public static final MemorySegment ADDR = webgpu_h.findOrThrow("wgpuRenderPassEncoderDrawIndirect");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndirect(WGPURenderPassEncoder renderPassEncoder, WGPUBuffer indirectBuffer, uint64_t indirectOffset)
     * }
     */
    public static FunctionDescriptor wgpuRenderPassEncoderDrawIndirect$descriptor() {
        return wgpuRenderPassEncoderDrawIndirect.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndirect(WGPURenderPassEncoder renderPassEncoder, WGPUBuffer indirectBuffer, uint64_t indirectOffset)
     * }
     */
    public static MethodHandle wgpuRenderPassEncoderDrawIndirect$handle() {
        return wgpuRenderPassEncoderDrawIndirect.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndirect(WGPURenderPassEncoder renderPassEncoder, WGPUBuffer indirectBuffer, uint64_t indirectOffset)
     * }
     */
    public static MemorySegment wgpuRenderPassEncoderDrawIndirect$address() {
        return wgpuRenderPassEncoderDrawIndirect.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndirect(WGPURenderPassEncoder renderPassEncoder, WGPUBuffer indirectBuffer, uint64_t indirectOffset)
     * }
     */
    public static void wgpuRenderPassEncoderDrawIndirect(MemorySegment renderPassEncoder, MemorySegment indirectBuffer, long indirectOffset) {
        var mh$ = wgpuRenderPassEncoderDrawIndirect.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderPassEncoderDrawIndirect", renderPassEncoder, indirectBuffer, indirectOffset);
            }
            mh$.invokeExact(renderPassEncoder, indirectBuffer, indirectOffset);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wgpuRenderPassEncoderEnd {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            webgpu_h.C_POINTER
        );

        public static final MemorySegment ADDR = webgpu_h.findOrThrow("wgpuRenderPassEncoderEnd");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderEnd(WGPURenderPassEncoder renderPassEncoder)
     * }
     */
    public static FunctionDescriptor wgpuRenderPassEncoderEnd$descriptor() {
        return wgpuRenderPassEncoderEnd.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderEnd(WGPURenderPassEncoder renderPassEncoder)
     * }
     */
    public static MethodHandle wgpuRenderPassEncoderEnd$handle() {
        return wgpuRenderPassEncoderEnd.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderEnd(WGPURenderPassEncoder renderPassEncoder)
     * }
     */
    public static MemorySegment wgpuRenderPassEncoderEnd$address() {
        return wgpuRenderPassEncoderEnd.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderEnd(WGPURenderPassEncoder renderPassEncoder)
     * }
     */
    public static void wgpuRenderPassEncoderEnd(MemorySegment renderPassEncoder) {
        var mh$ = wgpuRenderPassEncoderEnd.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderPassEncoderEnd", renderPassEncoder);
            }
            mh$.invokeExact(renderPassEncoder);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wgpuRenderPassEncoderEndOcclusionQuery {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            webgpu_h.C_POINTER
        );

        public static final MemorySegment ADDR = webgpu_h.findOrThrow("wgpuRenderPassEncoderEndOcclusionQuery");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderEndOcclusionQuery(WGPURenderPassEncoder renderPassEncoder)
     * }
     */
    public static FunctionDescriptor wgpuRenderPassEncoderEndOcclusionQuery$descriptor() {
        return wgpuRenderPassEncoderEndOcclusionQuery.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderEndOcclusionQuery(WGPURenderPassEncoder renderPassEncoder)
     * }
     */
    public static MethodHandle wgpuRenderPassEncoderEndOcclusionQuery$handle() {
        return wgpuRenderPassEncoderEndOcclusionQuery.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderEndOcclusionQuery(WGPURenderPassEncoder renderPassEncoder)
     * }
     */
    public static MemorySegment wgpuRenderPassEncoderEndOcclusionQuery$address() {
        return wgpuRenderPassEncoderEndOcclusionQuery.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderEndOcclusionQuery(WGPURenderPassEncoder renderPassEncoder)
     * }
     */
    public static void wgpuRenderPassEncoderEndOcclusionQuery(MemorySegment renderPassEncoder) {
        var mh$ = wgpuRenderPassEncoderEndOcclusionQuery.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderPassEncoderEndOcclusionQuery", renderPassEncoder);
            }
            mh$.invokeExact(renderPassEncoder);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wgpuRenderPassEncoderExecuteBundles {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            webgpu_h.C_POINTER,
            webgpu_h.C_LONG,
            webgpu_h.C_POINTER
        );

        public static final MemorySegment ADDR = webgpu_h.findOrThrow("wgpuRenderPassEncoderExecuteBundles");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderExecuteBundles(WGPURenderPassEncoder renderPassEncoder, size_t bundleCount, const WGPURenderBundle *bundles)
     * }
     */
    public static FunctionDescriptor wgpuRenderPassEncoderExecuteBundles$descriptor() {
        return wgpuRenderPassEncoderExecuteBundles.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderExecuteBundles(WGPURenderPassEncoder renderPassEncoder, size_t bundleCount, const WGPURenderBundle *bundles)
     * }
     */
    public static MethodHandle wgpuRenderPassEncoderExecuteBundles$handle() {
        return wgpuRenderPassEncoderExecuteBundles.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderExecuteBundles(WGPURenderPassEncoder renderPassEncoder, size_t bundleCount, const WGPURenderBundle *bundles)
     * }
     */
    public static MemorySegment wgpuRenderPassEncoderExecuteBundles$address() {
        return wgpuRenderPassEncoderExecuteBundles.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderExecuteBundles(WGPURenderPassEncoder renderPassEncoder, size_t bundleCount, const WGPURenderBundle *bundles)
     * }
     */
    public static void wgpuRenderPassEncoderExecuteBundles(MemorySegment renderPassEncoder, long bundleCount, MemorySegment bundles) {
        var mh$ = wgpuRenderPassEncoderExecuteBundles.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderPassEncoderExecuteBundles", renderPassEncoder, bundleCount, bundles);
            }
            mh$.invokeExact(renderPassEncoder, bundleCount, bundles);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
